# qualitative_coding_agent

./: .env.sample  .gitignore  Makefile  Process_coding_agent.md  README.md  coding_prompt.txt  final_output.md  final_output_calibrating_the.md  final_output_pre_intervention_data.md  langgraph.json  prompts.txt  pyproject.toml  requirements.txt  test.py
aider prompt templates/: aider_oneshot.sh  aider_reflect.sh
aider spec templates/: aider_spec_add_evaluation_node.md  aider_spec_add_feedback_node.md  aider_spec_add_final_node.md  aider_spec_adding_qa_nodes.md  aider_spec_chunking.md  aider_spec_coding_agent.md  aider_spec_combined_code_question.md  aider_spec_fill_in_prompt.md  aider_spec_fix_apply_feedback.md  aider_spec_modify_for_o3.md  aider_spec_modify_pdf_cleaner_for_file.md  aider_spec_skepticism.md  aider_spec_synthesis.md  aider_spec_template.md
cleaned_text_outputs/: cleaned_text_boilerplate removal check_20241230_184048.md  cleaned_text_boilerplate_remover_20241222_091614.md  cleaned_text_markdown_formatter_20241230_184146.md  cleaned_text_qa_feedback_20250102_125521.md  cleaned_text_qa_feedback_20250102_131842.md  cleaned_text_qa_feedback_20250102_192601.md  cleaned_text_text_cleaner_20241222_090633.md  cleaned_text_text_cleaner_20241222_091446.md  cleaned_text_text_cleaner_20241222_093216.md  cleaned_text_text_cleaner_20241230_183952.md  cleaned_text_text_cleaner_20241231_094916.md  cleaned_text_text_cleaner_20241231_185304.md  cleaned_text_text_cleaner_20250102_120539.md  cleaned_text_text_cleaner_20250102_122851.md  cleaned_text_text_cleaner_20250102_124018.md  cleaned_text_text_cleaner_20250102_124444.md  (+4 more)
(+284 files in other folders)
